--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="notes">
-        <h3>Built with &hearts; by Michael Evans </h1>
+        <!-- <h3>Built with &hearts; by Michael Evans </h1> -->
     </div>
 </body>
 
